--- a/src/pages/checkout/checkout.css
+++ b/src/pages/checkout/checkout.css
@@ -2415,7 +2415,7 @@
     text-align: center;
     border-radius: 50%;
     color: #fff;
-    background-color: var(--color-green2);
+    background-color: var(--color-blue1);
     font-size: 30px;
     -ms-flex-negative: 0;
         flex-shrink: 0;
